routing for sell a product works

--- a/Bangazon/Views/Shared/_LoginPartial.cshtml
+++ b/Bangazon/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,7 @@
         </li>
     </ul>
     <ul class="nav navbar-nav navbar-left">
-        <li><a asp-area="" asp-controller="Home" asp-action="Index">Sell A Product</a></li>
+        <li><a asp-area="" asp-controller="Products" asp-action="Create">Sell A Product</a></li>
     </ul>
 </form>
 }
