working on HomeController

--- a/Bangazon/Views/Home/Index.cshtml
+++ b/Bangazon/Views/Home/Index.cshtml
@@ -1,14 +1,24 @@
-﻿@{
+﻿@model IEnumerable<Bangazon.Models.Product>
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    
-       
-</div>
-
-<div class="row">
-    
-    
-    
-</div>
+<h2>Index</h2>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Title)
+            </th>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
