--- a/Bangazon/Views/Shared/_LoginPartial.cshtml
+++ b/Bangazon/Views/Shared/_LoginPartial.cshtml
@@ -11,16 +11,19 @@
             <li>
                 <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
+           
+
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
             </li>
-        </ul>
-    </form>
+            <ul class="nav navbar-nav">
+                <li><a asp-area="" asp-controller="Products" asp-action="Create">Sell A Product</a></li>
+            </ul>
+</form>
 }
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="" asp-controller="Products" asp-action="Create">Sell A Product</a></li>
         <li><a asp-area="Identity" asp-page="/Account/Register">Register</a></li>
         <li><a asp-area="Identity" asp-page="/Account/Login">Login</a></li>
     </ul>
