product list sorted by most recent made products

--- a/Bangazon/Views/Home/Index.cshtml
+++ b/Bangazon/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Title)
+                    <a asp-action="Detail" asp-route-id="@item.Title">@Html.DisplayFor(modelItem => item.Title)</a>
                 </td>
             </tr>
         }
