--- a/Bangazon/Views/Home/Index.cshtml
+++ b/Bangazon/Views/Home/Index.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewData["Title"] = "Home Page";
 }
+@* Author: Helen Chalmers
+   Description: made the product names clickable
+    *@
 
 <h2>Index</h2>
 <table class="table">
