code is now commented out

--- a/Bangazon/Views/ProductTypes/Details.cshtml
+++ b/Bangazon/Views/ProductTypes/Details.cshtml
@@ -11,7 +11,7 @@
 <hr />
 
     
-        
+        @*Meg told me to hard code the titles of the items below, because it is not part of the issue 2.*@
             <div class="col-md-4">
                 Title
             </div>
@@ -23,7 +23,7 @@
                 </div>
     
 
-
+        @*Below, created a for each loop that prints out Title Quantity, and Price from all of the ProductIds available*@
     @foreach (var item in Model.Products)
     {
         
