added functional searchbar

--- a/Bangazon/Views/Shared/_Layout.cshtml
+++ b/Bangazon/Views/Shared/_Layout.cshtml
@@ -36,6 +36,14 @@
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
+                
+                <p>
+                    @using (Html.BeginForm("SearchResults", "Products", FormMethod.Get))
+                    {
+                        @Html.TextBox("search") <input type="submit" value="Search" />
+                    }
+                </p>
+            
         </div>
     </nav>
 
