--- a/Bangazon/Views/Products/Details.cshtml
+++ b/Bangazon/Views/Products/Details.cshtml
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ProductId">Edit</a> |
+    <a asp-area="" asp-controller="Products" asp-action="AddToOrder" asp-route-id="@Model.ProductId">Add to Order</a>
     <a asp-action="Index">Back to List</a>
 </div>
