--- a/Bangazon/Views/Shared/_LoginPartial.cshtml
+++ b/Bangazon/Views/Shared/_LoginPartial.cshtml
@@ -18,6 +18,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-left">
         <li><a asp-area="" asp-controller="Products" asp-action="Create">Sell A Product</a></li>
+        <li><a asp-area="" asp-controller="PaymentTypes" asp-action="Create">Add Payment</a></li>
     </ul>
 </form>
 }
