search bar is hidden on logout

--- a/Bangazon/Views/Products/SearchResults.cshtml
+++ b/Bangazon/Views/Products/SearchResults.cshtml
@@ -5,7 +5,10 @@
 }
 
 <h2>SearchResults</h2>
-
+@* 
+    Authors: Dejan Stjepanovic and Helen Chalmers
+    View: this is a view fo rthe list of products that comes up when the search bar is entered.
+*@
 
 <table class="table">
     <thead>
