still working on the view cart

--- a/Bangazon/Views/Orders/Details.cshtml
+++ b/Bangazon/Views/Orders/Details.cshtml
@@ -23,16 +23,16 @@
             @Html.DisplayFor(model => model.DateCompleted)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.User)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.User.Id)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.PaymentType)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.PaymentType.AccountNumber)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.OrderProducts)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.OrderProducts)
         </dd>
     </dl>
 </div>
