--- a/Bangazon/Views/Shared/_LoginPartial.cshtml
+++ b/Bangazon/Views/Shared/_LoginPartial.cshtml
@@ -20,6 +20,7 @@
         <ul class="nav navbar-nav navbar-left">
             <li><a asp-area="" asp-controller="Products" asp-action="Create">Sell A Product</a></li>
             <li><a asp-area="" asp-controller="PaymentTypes" asp-action="Index">Add Payment</a></li>
+            <li><a asp-area="" asp-controller="Orders" asp-action="Index">View Cart</a></li>
         </ul>
 
 
