halfway done with ticket going to group code

--- a/Bangazon/Views/Orders/Checkout.cshtml
+++ b/Bangazon/Views/Orders/Checkout.cshtml
@@ -16,6 +16,8 @@
             </select>
             <span asp-validation-for="PaymentType.PaymentTypeId" class="text-danger"></span>
         </div>
-        <td><input type="button" value="Finalize Payment"></td>
+        <div class="form-group">
+            <input type="submit" value="Finalize Payment" class="btn btn-default" />
+        </div>
     </thead>
 </table>
