attached Payment type to order

--- a/Bangazon/Views/Orders/Checkout.cshtml
+++ b/Bangazon/Views/Orders/Checkout.cshtml
@@ -9,15 +9,16 @@
 
 <table class="table">
     <thead>
-        <div class="form-group">
-            <label asp-for="PaymentType.PaymentTypeId" class="control-label">Select Payment Type</label>
-            <select asp-for="PaymentType.PaymentTypeId" class="form-control" asp-items="@Model.PaymentTypeListItems">
-                <option disabled selected> --- SELECT ---</option>
-            </select>
-            <span asp-validation-for="PaymentType.PaymentTypeId" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Finalize Payment" class="btn btn-default" />
-        </div>
+        <form asp-controller="Orders" asp-action="CompleteOrder">
+            
+                <label asp-for="PaymentType.PaymentTypeId" class="control-label">Select Payment Type</label>
+                <select asp-for="PaymentType.PaymentTypeId" class="form-control" asp-items="@Model.PaymentTypeListItems">
+                    <option disabled selected> --- SELECT ---</option>
+                </select>
+                <span asp-validation-for="PaymentType.PaymentTypeId" class="text-danger"></span>
+            
+                <input type="submit" value="Finalize Order" />
+            
+        </form>
     </thead>
 </table>
