--- a/Bangazon/Views/Orders/Checkout.cshtml
+++ b/Bangazon/Views/Orders/Checkout.cshtml
@@ -17,7 +17,7 @@
                 </select>
                 <span asp-validation-for="PaymentType.PaymentTypeId" class="text-danger"></span>
             
-                <input type="submit" value="Finalize Order" />
+                <input type="submit" value="Finalize Order" asp-controller="Orders" asp-action="CompleteOrder" />
             
         </form>
     </thead>
